# linux_c_demo

./: CMakeLists.txt
crack/: readme.txt
doc/: eventfd.txt  ip.txt  jemalloc_install.txt  nmap.txt  route.txt  sigset_t.txt  性能测试  远程编译
doc/CMakeLists_backup/: CMakeLists_Linux.txt  CMakeLists_Windows.txt
doc/Linux调优/: ulimit.txt
doc/api说明/: atomic 和 memory_order学习.txt  cas.txt  coroutine学习.txt  epoll.txt  memory_order学习.txt  ucontext.txt
doc/gdb调试/: gdb说明.txt  ubuntu问题.txt
doc/go实现arp/: arp_attack.go
doc/java堆外内存/: java堆外内存泄露查询思路.txt  jemalloc安装.txt  jvm堆外内存.txt  malloc_conf配置说明.txt  malloc_hook生成.txt  未整理.txt
doc/lua测试相关/: lua动态库生成.txt
doc/rpc/: ice.txt
doc/windows/: iocp.txt
doc/其他/: EtherType以太网类型.txt  git设置.txt  java NMT.txt  服务器开发状态  测试需求  设置静态arp映射.txt
doc/内存管理/: linux内存管理.txt  内存管理.txt  清理缓存.txt
doc/内核/: helloworld测试.txt  用户空间和内核空间交互.txt
doc/基础/: 基础.txt
doc/敏感词/: readme.txt
doc/数据库安装使用/mongodb/: mongodb使用.txt
doc/数据库安装使用/redis/: redis_client使用.txt
doc/汇编/: GCC的内嵌汇编语法.txt
doc/软件使用/: cmake使用.txt  core文件.txt  curl使用.txt  gcc使用.txt  jemalloc内存.txt  ldconfig使用.txt  ldd使用.txt  ln使用.txt  nginx_https.txt  nginx配置.txt  readelf使用.txt  redis使用.txt  scp使用.txt  skynet内存查看.txt  tar使用.txt  了解 一台主机.txt  内存查看.txt  查看进程相关.txt  磁盘查看.txt  网络监控.txt  证书生成.txt
doc/软件安装/: btrace安装.txt  cmake安装.txt  crack.txt  curl安装.txt  dwarfdump安装.txt  gperftools安装.txt  ice安装.txt  java安装.txt  jemalloc安装.txt  libunwind安装.txt  lua安装.txt  mongodb安装.txt  nodejs安装.txt  openssl安装.txt  php相关.txt  protobuff安装.txt  skynet安装.txt  tomcat安装.txt  ubuntu gcc 安装.txt  zookeeper client安装 .txt  升级gcc到4_9.txt
doc/问题排查/: arp项添加失败拒绝访问.txt  cpu.txt  gdb说明.txt  ld无法找到问题.txt  linux内核网络参数.txt  skynet_httpc崩溃.txt  tcp非正常断开.txt  time_wait问题.txt  内存.txt  定位segment fault.txt
doc/高速缓存/: 性能查看.txt  高速缓存.txt
src/algorithm_test/: rbtree.h  rbtree_test.c  rbtree_test2.c
src/assembler_test/: example1.c  helloworld.c  helloworld.s  readme.txt  test.c
src/atomic_test/: atomic_test.c  atomic_test1.c  atomic_test2.c  memory_order_test.c
src/attack/: arp_attack.c  arp_attack.h  memory_mgr.c  memory_mgr.h  model.c  model.h  net_util.c  net_util.h
src/attack_test/: SendAttackArp.c  SendAttackIcmp.c  SendAttackSync.c  SendAttackSync2.c  SendAttackUdp.c  SendMyIcmp.c  SendMyIcmp2.c  SendMySync.c  SendMyself_Arp.c  SendMyself_Icmp.c  SendMyself_Tcp.c  SendMyself_Tcp2.c  SimpelSniffer.c  SimpelSniffer2.c  model.h
src/base_test/: itimerval_test.c  malloc_test2.c  mmap_test.c  nanosleep_test  nanosleep_test.c  point_test.c  point_test2.c  pthread_self_test.c  segment_fault_test.c  struct_test.c  ucontext_test.c
src/common/: array.c  array.h  arraylist.c  arraylist.h  exception.c  exception.h  interface.h  logger.c  logger.h  memory.c  memory.h  nolock_queue.c  nolock_queue.h  rbtree.c  threadpool.c  threadpool.h  timing_wheel.c  timing_wheel.h  type.h
src/coroutine/: coroutine.c  main.c
src/coroutine_test/: jmp_test.c  jmpcall  jmpcall.c  readme.txt  setjmp.s
src/cpu_cache_test/: array_test1.c  array_test2.c  array_test3.c  array_test4.c  padding.h  padding_test.c  padding_test1.c  padding_test2.c  test.sh  test_padding.sh
src/create_lib_test/: readme  test-explicit  test-explicit.c  test-implicit  test-implicit.c  test-sta  test-sta.c  welcome.c  welcome.h
src/dll_test/: a.out  readme.txt  test.c
src/dll_test/doc/: readme.txt
src/dll_test/math/: math_test.c  math_test.h
src/dll_test/max/: max_test.c  max_test.h
src/epoll_test/: client.c  client2.c  client3.c  compile.sh  epoll_test_event.c  epoll_test_pipe.c  epoll_test_signal.c  server.c  server2.c
src/game_server/: common.h  net_server_epoll.c  net_server_epoll.h  nolock_queue.c  nolock_queue.h  starter.c  threadpool.c  threadpool.h  timing_wheel.c  timing_wheel.h
src/gdb_test/: gdb_test  gdb_test.c
src/httpserver_test/: httpd.c  httpd.h  starter.c
src/ice_rpc_test/: readme.txt
src/ice_rpc_test/generate/: common_basetype.cpp  common_basetype.h  common_event.cpp  common_event.h  common_gm.cpp  common_gm.h  common_ifs.cpp  common_ifs.h  server_battle.cpp  server_battle.h  server_model.cpp  server_model.h  server_room.cpp  server_room.h
src/ice_rpc_test/hello/: Client  Hello.cpp
src/ice_rpc_test/ice_file/: common_basetype.ice  common_event.ice  (+6 more)
src/java_offheap_memory/: MallocTest.java  MemoryDemo.c  MemoryDemo.h  malloc_demo  malloc_hook.c  offheap_unsafe.sh
src/jni_test/: HelloWorld.c  libhelloworld.so.1.0  readme.txt
src/libdatrie_test/: test_byte_alpha.c  test_file.c  utils.c  utils.h
src/libtask_test/: libtask_test1.c  readme.txt
src/luac_test/: luac_test1  luac_test1.c  luac_test2.c  luac_test3.c  readme.txt
src/makefile_test/: makefile
src/malloc_test/: heap_info.out  jemalloc_test.c  jemalloc_test2.c  malloc_test.c  mem_leak_test1  mem_leak_test1.c  mem_leak_test2.c  mem_leak_test3.c  readme.txt  test_mem_leak1.sh  test_mem_leak3.sh
src/mysql_test/: mysql_test.c  readme  test.sql
src/net_test/: udp_client.c  udp_server.c
src/networkcard_test/: networkcard_test.c
src/protobuf_test/: main  protobuf_test.c  student.pb-c.c  student.pb-c.h  student.proto
src/ptrace_test/: foo  foo.c  main.c  ptrace-example-linux  readme.txt
src/stdatomic_test/: readme.txt  stdatomic_test.c
src/sync_test/: account.c  account.h  accouotn_test.c  cal_test.c  common.h  model.h  sync_test1.c  sync_test2.c  sync_test3.c  sync_test4.c
src/thread_test/: readme.txt  thread_conditionvariable_test.c  thread_local_test.c  thread_mutex_test.c  thread_semaphore_test.c  thread_seqlock_test.c
src/zookeeper_test/: readme.txt  zookeeper_m_test  zookeeper_m_test.c  zookeeper_s_test  zookeeper_s_test.c  zookeeper_test1.c
(+86 files in other folders)
